@@ -1,3 +1,10 @@
+2004-06-24 Alain Magloire
+
+	Fix 68226, the stackinfodepth was call in
+	the wrong thread.  Fix by selecting the thread earlier.
+
+	* cdi/org/eclipse/cdt/debug/mic/core/cdi/EventManager.java
+	
 2004-05-31 Alain Magloire
 	Fix for PR 58249
 		GDB has special "types"
